# plumbline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GPU_RUNBOOK.md  LICENSE  README.md  REPRODUCTIONS.md  SECURITY.md  SESSION_2026-05-25.md  THIRD_PARTY_NOTICES.md  plan.md  pyproject.toml
.claude/skills/reproduce-pose/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  reproduction_discrepancy.md
.github/workflows/: ci.yml  testpypi.yml  wheels.yml
docs/: AGENT_GPU_RUNBOOK.md  AGENT_PLAN_20260421.md  AGENT_RUN_20260421.md  ARCHITECTURE.md  BLOCKED.md  BO_BACKLOG.md  CONFIDENCE_AUDIT.md  D29_DIODE_TABLE2_HANDOFF.md  DAGE_VALIDATION_OPPORTUNITIES.md  DA_V2_TABLE2_UPSTREAM_EVAL.md  DEPTH_PRO_TABLE1_METRIC_EVAL.md  DISCREPANCIES.md  E3D_BENCH_ANCHORS_HANDOFF.md  ETH3D_DAV2_TABLE2_HANDOFF.md  ETH3D_DEPTH_PRO_TABLE1_HANDOFF.md  GPU_BACKLOG_PLAN.md  README.md  RELEASE_CHECKLIST.md  SAMPLE_LISTS.md  SESSION_HANDOFF.md  SHUTDOWN_PLAN_20260422.md  SINTEL_DAV2_TABLE2_HANDOFF.md  SOURCE_AUDIT.md  UPSTREAM_OUTREACH.md  dataset_footprints.md
docs/blocked/: CUT3R_DEPTH_LINEAGE.md  DEPTH_PRO_MIDDLEBURY_TABLE1.md  DEPTH_PRO_NUSCENES_TABLE1.md  DEPTH_PRO_SINTEL_TABLE1.md  DEPTH_PRO_SUN_RGBD_TABLE1.md  PI3_RECONSTRUCTION.md  UPSTREAM_CHECKPOINT_KITTI.md  VGGT_DTU_CHAMFER.md
docs/blocked/artifacts/: depth_pro_sun_rgbd_focal_probe.py  depth_pro_sun_rgbd_focal_probe_20260601.json
docs/runs/: 20260421.md  plumb_dust3r_co3dv2_pose_20260527T064952Z.json  plumb_monst3r_sintel_pose_v3_20260527T053353Z.json  plumb_vggt_eth3d_13_20260527T163122Z.json
protocols/: bonn_dust3r_lineage_single.yaml  bonn_lineage_110_single.yaml  booster_depth_pro_metric.yaml  co3dv2_vggt_pose.yaml  ddad_moge.yaml  diode_dav2.yaml  diode_dav2_moge_bundle.yaml  diode_dav2_moge_warp.yaml  diode_indoor_unik3d_metric.yaml  diode_moge.yaml  dtu_vggt_table2.yaml  eth3d_dav2.yaml  eth3d_depth_pro_metric.yaml  eth3d_moge.yaml  eth3d_unik3d_metric.yaml  eth3d_vggt_table3.yaml  gso_moge.yaml  ibims1_depth_pro_metric.yaml  ibims1_moge.yaml  kitti_dust3r_lineage.yaml  kitti_eigen_crop.yaml  kitti_eigen_garg.yaml  kitti_moge_eval.yaml  marigold_kitti_eval.yaml  middlebury_depth_pro_metric.yaml  nuscenes_depth_pro_metric.yaml  nyu_dust3r_lineage.yaml  nyu_dust3r_table2.yaml  nyu_eigen_2014.yaml  realestate10k_pose.yaml  sintel_dav2.yaml  sintel_depth_pro_metric.yaml  sintel_dust3r_lineage.yaml  sintel_moge.yaml  sun_rgbd_depth_pro_metric.yaml  sun_rgbd_native_depth_pro_metric.yaml
reproductions/: AUDIT.md  cut3r_bonn.yaml  cut3r_bonn_110.yaml  cut3r_kitti.yaml  cut3r_kitti_lineage.yaml  cut3r_nyuv2.yaml  cut3r_nyuv2_lineage.yaml  cut3r_nyuv2_prepared.yaml  cut3r_scannet_pose_dage.yaml  cut3r_sintel_pose_dage.yaml  cut3r_tum_pose_dage.yaml  da3_co3dv2_pose.yaml  da3_diode.yaml  da3_eth3d.yaml  da3_eth3d_courtyard_chamfer.yaml  da3_gso.yaml  da3_kitti.yaml  da3_nyuv2.yaml  da3_sintel.yaml  da3_view_sweep_courtyard.py  da_v2_base_diode_indoor_full.yaml  da_v2_base_diode_moge_bundle.yaml  da_v2_base_diode_native.yaml  da_v2_base_eth3d_native.yaml  da_v2_base_kitti.yaml  da_v2_base_nyuv2.yaml  da_v2_base_sintel.yaml  da_v2_large_ddad.yaml  da_v2_large_diode.yaml  da_v2_large_diode_indoor_full.yaml  da_v2_large_diode_moge_bundle.yaml  da_v2_large_diode_native.yaml  da_v2_large_eth3d_moge.yaml  da_v2_large_eth3d_moge_table2.yaml  da_v2_large_eth3d_native.yaml  da_v2_large_gso.yaml  da_v2_large_ibims1.yaml  da_v2_large_kitti.yaml  da_v2_large_kitti_moge.yaml  da_v2_large_nyuv2.yaml  (+111 more)
scripts/: _cut3r_nyu_input_diff.py  _cut3r_nyu_median_probe.py  _dust3r_bonn_recipe_probe.py  _dust3r_bonn_rgb110_probe.py  _dust3r_nyu_recipe_probe.py  _dust3r_nyu_singlediff.py  _monst3r_bonn_recipe_probe.py  _monst3r_sintel_recipe_probe.py  _re10k_lowpass_sweep.py  _re10k_resolution_sweep.py  ablate_nyu_gtfield.py  analyze-depth-pro-sintel-json.py  backup-periodic.sh  backup-session.sh  bo_backlog.py  bo_table_forecast.py  check_disk_budget.py  co3dv2_prefetch.py  deploy_site_preview.py  download-booster.sh  download-middlebury.sh  download-nuscenes.sh  download-sun-rgbd.sh  fetch_kitti.py  gpu_box_session_token.sh  install_geowizard_extras.sh  list_validation_targets.py  moge_eval_sintel_upstream.json  pod-localssd-env.sh  probe-depth-pro-sintel-protocol.py  probe-diode-d29-native-vs-bundle.py  probe-diode-d29-warp.py  probe-eth3d-official-depth.py  probe-sintel-pass.py  refit_site.py  run-depth-pro-nuscenes-when-ready.sh  run-moge-upstream-dav2.sh  site_protocols.py  stage-eth3d-depth-pro.sh  stage-eth3d-train-scenes.sh  (+6 more)
site/: explore.html  index.html  styles.css
src/plumbline/: __init__.py  __main__.py  _discover.py  cache.py  cli.py  conventions.py  install.py  paths.py  protocols.py  queue.py  report.py  reproduce.py  runner.py  runner_metrics.py
src/plumbline/datasets/: __init__.py  _common.py  _nyuv2_eigen_test.txt  base.py  bonn.py  booster.py  co3dv2.py  co3dv2_vggt_eval.py  ddad_sintel_moge_eval.py  diode.py  dtu.py  eth3d.py  eth3d_moge_eval.py  eth3d_native_depth.py  gso.py  ibims1.py  kitti.py  middlebury.py  nuscenes.py  (+12 more)
tests/: _fakes.py  conftest.py  test_adapter_smoke.py  test_base_classes.py  test_bonn.py  test_cache.py  test_cli.py  test_cli_subprocess.py  test_co3dv2_prefetch.py  test_conventions.py  test_cut3r.py  test_datasets.py  test_depth_anything_v2_integration.py  test_dust3r.py  test_geometry_roundtrip.py  test_install_registry.py  test_make_samples.py  test_metric_alignment_warning.py  test_metrics.py  test_metrics_properties.py  test_model_adapters.py  test_monst3r.py  test_mvs_pipeline.py  test_nyuv2.py  test_plugin_discovery.py  test_pose_trajectory.py  test_protocols.py  test_queue.py  test_real_imagery_integration.py  test_report.py  test_reproduce.py  test_reproduction_integrity.py  test_reproduction_metric_keys.py  test_runner.py  test_scannet_video_pose.py  test_site_coverage.py  test_sun_rgbd_native.py  test_tum_dynamics.py  test_vda_adapter.py  test_version_sync.py
(+35 files in other folders)
