[project]
name = "plumbline-bench"
version = "0.1.0.dev0"
description = "Reproducible evaluation harness for 3D geometric foundation models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kevin Blackburn-Matzen" },
]
keywords = ["3d", "depth", "evaluation", "benchmark", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "tqdm>=4.65",
    "pillow>=10.0",
    "imageio>=2.30",
]

[project.optional-dependencies]
torch = [
    "torch>=2.1",
    "torchvision>=0.16",
]
models = [
    "plumbline-bench[torch]",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "timm>=1.0",
    "einops>=0.7",
    "safetensors>=0.4",
]
scipy = [
    "scipy>=1.11",
]

[project.scripts]
plumbline = "plumbline.cli:app"

[project.urls]
Homepage = "https://plumbline-bench.org"
Repository = "https://github.com/kmatzen/plumbline"
Issues = "https://github.com/kmatzen/plumbline/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plumbline"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/reproductions",
    "/README.md",
    "/LICENSE",
    "/plan.md",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "scipy>=1.11",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "N803",   # argument name should be lowercase — we use K, R, T for camera matrices
    "N806",   # variable in function should be lowercase — ditto
    "B008",   # function call in default argument — typer uses this pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "gpu: tests requiring CUDA",
    "weights: tests requiring downloaded model weights",
    "data: tests requiring downloaded datasets",
    "slow: slow tests (>5s)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "scipy.*",
    "imageio.*",
    "PIL.*",
    "timm.*",
    "einops.*",
]
ignore_missing_imports = true
