[project]
name = "plumbline-bench"
version = "0.1.0.dev0"
description = "Reproducible evaluation harness for 3D geometric foundation models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kevin Blackburn-Matzen" },
]
keywords = ["3d", "depth", "evaluation", "benchmark", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "tqdm>=4.65",
    "pillow>=10.0",
    "imageio>=2.30",
    "h5py>=3.16.0",
]

[project.optional-dependencies]
torch = [
    "torch==2.6.0",
    "torchvision==0.21.0",
]
models = [
    "plumbline-bench[torch]",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "timm>=1.0",
    "einops>=0.7",
    "safetensors>=0.4",
    "diffusers>=0.27",
    "accelerate>=0.28",
]
# GeoWizard's upstream pipeline (cloned to $GEOWIZARD_ROOT) imports
# xformers directly in its attention.py. xformers is not needed by any
# other adapter and pulls a non-trivial nvidia-* stack; kept out of
# the base `models` extra so DA-V2 / MoGe / VGGT / Marigold users
# don't pay for it. Pin: 0.0.29.post3 is the last release compatible
# with torch==2.6.0+cu124 (later xformers force-bumps torch to 2.11+
# which needs CUDA-driver >= 12.3, breaking older rental boxes).
#
# Known-good install order on a fresh box:
#   uv sync --extra models --extra geowizard
#   uv pip install --force-reinstall 'nvidia-cudnn-cu12==9.1.0.70'
# The force-reinstall step fixes a cudnn load-order clash that only
# surfaces when xformers is grafted onto an already-installed torch
# env (observed 2026-04-23 GPU session — conv silently returned
# CUDNN_STATUS_NOT_INITIALIZED until cudnn was re-laid-down).
geowizard = [
    "plumbline-bench[models]",
    "xformers==0.0.29.post3",
]
scipy = [
    "scipy>=1.11",
]
# Sparse-archive fetch support for scripts/fetch_kitti.py (whale drives
# where only a handful of frames are needed out of a 10+ GB zip).
# Installing this extra skips the full-zip download and instead issues
# HTTP range requests per entry.
scripts = [
    "remotezip>=0.12",
    "gdown>=5.1",
]

[project.scripts]
plumbline = "plumbline.cli:app"

[project.urls]
Homepage = "https://plumbline-bench.org"
Repository = "https://github.com/kmatzen/plumbline"
Issues = "https://github.com/kmatzen/plumbline/issues"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plumbline"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/reproductions",
    "/README.md",
    "/LICENSE",
    "/plan.md",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "scipy>=1.11",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20260408",
    "pre-commit>=4.5.1",
    "hypothesis>=6.152.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "N803",   # argument name should be lowercase — we use K, R, T for camera matrices
    "N806",   # variable in function should be lowercase — ditto
    "B008",   # function call in default argument — typer uses this pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "gpu: tests requiring CUDA",
    "weights: tests requiring downloaded model weights",
    "data: tests requiring downloaded datasets",
    "slow: slow tests (>5s)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
# Numpy operations return `Any` pervasively; warn_return_any fires on every
# metric/geometry helper and doesn't meaningfully improve correctness.
warn_return_any = false
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "scipy.*",
    "imageio.*",
    "PIL.*",
    "timm.*",
    "einops.*",
    "h5py.*",
]
ignore_missing_imports = true
