[project]
name = "plumbline-bench"
version = "0.1.0.dev0"
description = "Reproducible evaluation harness for 3D geometric foundation models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kevin Blackburn-Matzen" },
]
keywords = ["3d", "depth", "evaluation", "benchmark", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "tqdm>=4.65",
    "pillow>=10.0",
    "imageio>=2.30",
    "h5py>=3.16.0",
    # torch + HF stack are base deps so `pip install plumbline-bench` is
    # enough to run any non-GeoWizard adapter. The CUDA flavor is *not*
    # forced from here — pip resolves torch from whatever index it's
    # configured for (PyPI default: cu124 on Linux, CPU/MPS on macOS).
    # Devs running `uv sync` from this repo get cu124 via [tool.uv.sources]
    # below; consumers of the published wheel are unaffected.
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "timm>=1.0",
    "einops>=0.7",
    "safetensors>=0.4",
    "diffusers>=0.27",
    "accelerate>=0.28",
]

[project.optional-dependencies]
# GeoWizard's upstream pipeline (cloned to $GEOWIZARD_ROOT) imports
# xformers directly in its attention.py. xformers is not needed by any
# other adapter and pulls a non-trivial nvidia-* stack; kept as an opt-in
# so DA-V2 / MoGe / VGGT / Marigold users don't pay for it. Pin:
# 0.0.29.post3 is the last release compatible with torch==2.6.0+cu124
# (later xformers force-bumps torch to 2.11+ which needs CUDA-driver
# >= 12.3, breaking older rental boxes).
#
# Known-good install order on a fresh box:
#   uv sync --extra geowizard
#   uv pip install --force-reinstall 'nvidia-cudnn-cu12==9.1.0.70'
# The force-reinstall step fixes a cudnn load-order clash that only
# surfaces when xformers is grafted onto an already-installed torch
# env (observed 2026-04-23 GPU session — conv silently returned
# CUDNN_STATUS_NOT_INITIALIZED until cudnn was re-laid-down).
geowizard = [
    "xformers==0.0.29.post3",
]
# NOTE: adapter install deps are deliberately NOT pyproject extras.
# `src/plumbline/install.py` (INSTALL_SPECS) is the single source of truth, and
# `plumbline install <name>` installs them — PyPI ones (depth-anything-3) via
# pip, git ones (vggt/moge/depth-pro) via `pip install git+...`, clone ones
# (mast3r/dust3r/monst3r/cut3r/pi3) via `git clone` + an env var. Keeping them
# out of pyproject is intentional: git URLs are PEP 508 direct references that
# PyPI rejects in a published package, and heavy/conflicting trees (e.g.
# depth-anything-3 pins numpy<2) would pollute uv.lock and downgrade the base
# install. `geowizard` stays an extra only for its lone PyPI dep (xformers).
scipy = [
    "scipy>=1.11",
]
# Sparse-archive fetch support for scripts/fetch_kitti.py (whale drives
# where only a handful of frames are needed out of a 10+ GB zip).
# Installing this extra skips the full-zip download and instead issues
# HTTP range requests per entry.
scripts = [
    "remotezip>=0.12",
    "gdown>=5.1",
]

[project.scripts]
plumbline = "plumbline.cli:app"

[project.urls]
Homepage = "https://plumbline-bench.org"
Repository = "https://github.com/kmatzen/plumbline"
Issues = "https://github.com/kmatzen/plumbline/issues"

[tool.uv.sources]
# Only force the cu124 index on Linux — macOS / Windows devs running
# `uv sync` from this repo get torch from the default PyPI index (which
# resolves to MPS-capable wheels on macOS arm64, CPU/CUDA wheels on
# Windows). The published wheel never propagates these source pins to
# end users, who get torch from whatever index their pip is configured
# for.
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plumbline"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/reproductions",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "scipy>=1.11",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20260408",
    "pre-commit>=4.5.1",
    "hypothesis>=6.152.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "N803",   # argument name should be lowercase — we use K, R, T for camera matrices
    "N806",   # variable in function should be lowercase — ditto
    "B008",   # function call in default argument — typer uses this pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "gpu: tests requiring CUDA",
    "weights: tests requiring downloaded model weights",
    "data: tests requiring downloaded datasets",
    "slow: slow tests (>5s)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
# Numpy operations return `Any` pervasively; warn_return_any fires on every
# metric/geometry helper and doesn't meaningfully improve correctness.
warn_return_any = false
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "scipy.*",
    "imageio.*",
    "PIL.*",
    "timm.*",
    "einops.*",
    "h5py.*",
]
ignore_missing_imports = true
